--- a/sagaraadmin.css
+++ b/sagaraadmin.css
@@ -2,7 +2,7 @@ html {
 	background-color: #fff;
 }
 body {
-	font-family: "Lato", sans-serif;
+	font-family: "Open Source Sans", sans-serif;
 	letter-spacing: 0.032em;
 }
 a {
@@ -32,6 +32,25 @@ textarea {
 	border: 1px solid #ddd;
 	box-shadow: none;
 	-webkit-appearance: none;
+}
+input[type=checkbox] {
+	position: relative;
+	min-width: 16px;
+	min-height: 16px;
+	border-radius: 666em;
+	border-color: #fff;
+	box-shadow: 0 0 1px rgba(0,0,0,0.64);
+}
+input[type=checkbox]:checked {
+	background-color: #0080FF;
+}
+input[type=checkbox]:checked:before {
+	content: "\f147";
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	font: 400 16px/1 dashicons;
+	color: #fff;
 }
 input[type=text]:focus,
 input[type=password]:focus,
@@ -116,14 +135,15 @@ textarea:focus {
 	padding-left: 20px;
 	padding-right: 20px;
 	color: #333;
-	background-color: #f5f5f5;
 	border: 1px solid #ccc;
 	text-shadow: none;
 	box-shadow: none;
 	border-radius: 6px;
 }
-.wp-core-ui .button:hover {
-	box-shadow: inset 0 2px 4px rgba(0,0,0,0.32);
+.wp-core-ui .button,
+.wp-core-ui .button:hover,
+.wp-core-ui .button.hover {
+	background-color: #f5f5f5;
 }
 .wp-core-ui .button:active {
 	transform: translateY(0);
